--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,7 +5,9 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/colorAccent"
         tools:context=".SettingsActivity">
+
 
     <ImageButton
             android:layout_width="77dp"
@@ -13,7 +15,9 @@
             android:id="@+id/toggleButton"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="36dp"
             android:layout_marginStart="36dp" android:layout_marginTop="36dp"
+            style="@style/Widget.AppCompat.ImageButton"
             app:layout_constraintTop_toTopOf="parent" tools:ignore="VectorDrawableCompat"/>
+
     <TextView
             android:text="@string/toggle_description"
             android:layout_width="226dp"
