--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,5 +17,13 @@
             android:hapticFeedbackEnabled="false"
             app:layout_constraintEnd_toEndOf="parent"
             style="@style/Widget.AppCompat.ImageButton" android:contentDescription="@string/settings"
-            android:layout_marginBottom="16dp" android:layout_marginEnd="36dp" android:layout_marginRight="36dp"/>
+            android:layout_marginBottom="420dp" android:layout_marginEnd="48dp" android:layout_marginRight="48dp"/>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:layout_width="match_parent"
+            android:layout_height="65dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="4dp"
+            app:menu="@menu/menu_items"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
