--- a/app/src/main/res/menu/menu_items.xml
+++ b/app/src/main/res/menu/menu_items.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="@string/title_activity_home" android:icon="@drawable/ic_home"/>
-    <item android:title="@string/title_activity_search" android:icon="@drawable/ic_search"/>
-    <item android:title="@string/title_activity_settings" android:icon="@drawable/ic_settings"/>
+    <item android:title="@string/title_activity_search" android:icon="@drawable/ic_search"
+          android:id="@+id/search_menu_item"/>
+    <item android:title="@string/title_activity_home" android:icon="@drawable/ic_home"
+          android:id="@+id/home_menu_item"/>
+    <item android:title="@string/title_activity_settings" android:icon="@drawable/ic_settings"
+          android:id="@+id/settings_menu_item"/>
 </menu>
