--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#006542</color>
     <color name="colorPrimaryDark">#006542</color>
     <color name="colorAccent">#FFFFFF</color>
-    <color name="colorAccentDark">#000000 </color>
+    <color name="colorAccentDark">#BBBBBB </color>
 </resources>
