Fixed fragment runtime issues

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,10 +5,11 @@
              android:layout_height="match_parent"
              tools:context=".SearchFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <ImageView
             android:src="@drawable/ic_search"
             android:layout_width="212dp"
-            android:layout_height="191dp" android:id="@+id/imageView"/>
+            android:layout_height="191dp"
+            android:id="@+id/imageView"
+            android:gravity="center_vertical"/>
 
 </FrameLayout>
