--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,6 +9,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/title_activity_home"
-            android:gravity="center_vertical"/>
+            android:gravity="center_horizontal"/>
 
 </FrameLayout>
